# ufaas-python

./: pyproject.toml
src/ufaas/: __init__.py  _schemas.py  client.py  compound_proposal.py  enums.py  exceptions.py  hold.py  proposal.py  schemas.py  services.py  ufaas.py  wallet.py
src/ufaas/apps/: __init__.py  base_app.py
src/ufaas/apps/basket/: __init__.py  basket_schemas.py  client.py  voucher_schemas.py
src/ufaas/apps/saas/: __init__.py  saas.py  schemas.py
src/ufaas/fastapi/: __init__.py  integration.py
tests/: __init__.py  conftest.py  test_async_client.py  test_client.py
